modified:   .env 	new file:   Dockerfile 	modified:   cmd/api/main.go 	modified:   docker-compose.yml 	modified:   docs/docs.go 	modified:   docs/swagger.json 	modified:   docs/swagger.yaml 	modified:   internal/application/http/handlers/bookshandlers/book.go 	modified:   internal/application/http/handlers/readers/reader.go 	modified:   internal/application/http/router.go 	modified:   internal/domain/aggregate/books/book.go 	modified:   internal/domain/entity/readers/reader.go 	modified:   internal/infrastructure/booksRepo/book.go 	modified:   internal/infrastructure/readersRepo/reader.go 	modified:   internal/service/books/book.go 	modified:   internal/service/books/book_service.go 	modified:   internal/service/readers/reader.go 	modified:   pkg/db/postgres/conn.go
